# CursoRipple

./: .python-version  lesson1.py  requirements.txt  test.py
clase1/: crear_wallet.py  create_check.py  deposit_auth.py  escrow.py  escrow2.py  load_wallet.py  partial_payment.py  tokens.py
clase2/: amm.js  nft.py  package-lock.json  package.json  tokens.py  tokens_original.py
clase3/: create_account.py  issue_asset.py  send_payment.py  stellar.toml
clase4/: dev.env  docker-compose.yml  estructura_general_contrato.rs  init.sql  setup.sh
clase4/config/: dev.assets.yaml  dev.services.yaml
clase4/hello-soroban/: Cargo.toml
clase4/hello-world/: Cargo.toml
clase4/hello-world/src/: test.rs
clase4/soroban-tutorial/: Cargo.toml  package-lock.json  package.json
clase4/soroban-tutorial/.soroban/: incrementor-id
clase4/soroban-tutorial/contracts/hello-world/: Cargo.toml
clase4/soroban-tutorial/contracts/hello-world/src/: lib.rs  test.rs
clase4/soroban-tutorial/contracts/hello-world/test_snapshots/test/: hello.1.json
clase4/soroban-tutorial/contracts/incrementor/: Cargo.toml
clase4/soroban-tutorial/contracts/incrementor/src/: lib.rs
clase4/soroban-tutorial/src/pages/: index.astro
clase4/torpedos/: 01_setup.txt  02_create_project.txt  04_tokens.txt
