[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soroban-sdk = "=20.0.0-rc2.2"

[dev_dependencies]
soroban-sdk = { version = "=20.0.0-rc2.2", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[lib]
crate-type = ["cdylib"]

#configurar el perfil de release para optimizar el tamaño
#los contratos en soroban no pueden exceder los 256kb, sin esto es virtualmente imposible
[profile.release] 
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

#notas: actualizar la version de rust usando
# curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
