[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true , features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]



#notas: actualizar la version de rust usando
# curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
